// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link can be displayed with the default styles 1`] = `
<Link__StyledLink
  as="a"
  context={
    Object {
      "inheritColor": undefined,
    }
  }
  data-testid="link"
  href={null}
  invert={false}
  to={null}
>
  Go home
</Link__StyledLink>
`;

exports[`Link can be inverted 1`] = `
<Link__StyledLink
  as="a"
  context={
    Object {
      "inheritColor": undefined,
    }
  }
  data-testid="link"
  href={null}
  invert={true}
  to={null}
>
  Go home
</Link__StyledLink>
`;

exports[`Link renders 1`] = `
<Link__StyledLink
  as="a"
  context={
    Object {
      "inheritColor": undefined,
    }
  }
  data-testid="link"
  href={null}
  invert={false}
  to={null}
>
  Go home
</Link__StyledLink>
`;
